# challegerDevBasic

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  main.py  mypy.ini  pyproject.toml  requirements.txt
routes/: person_routes.py
schemas/: person_schemas.py  vehicle_schemas.py
